--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,5 +6,10 @@ pipeline {
                 sh 'cat demo.txt'
             }
         }
+        stage('Read Readme.md file') {
+            steps {
+                sh 'cat README.md'
+            }
+        }
     }
 }
